# src/main/java/com/example/demo/application/mapper/DomainToInfrastructureMapper.java
@@ -1,18 +1,16 @@
 package com.example.demo.application.mapper;
 
 import com.example.demo.domain.model.FilterPrice;
-// import com.example.demo.infrastructure.adapter.inbound.request.FilterPriceRequest;
-// import com.example.demo.infrastructure.adapter.inbound.response.PriceResponse;
-import com.example.demo.infrastructure.adapter.dto.FilterPriceRequest;
 import com.example.demo.infrastructure.adapter.dto.PriceResponse;
 import com.example.demo.infrastructure.persistence.entity.PriceEntity;
+import java.time.OffsetDateTime;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 
 @Mapper(componentModel = "spring")
 public interface DomainToInfrastructureMapper {
 
-  FilterPrice toDomain(FilterPriceRequest filterPriceRequest);
+  FilterPrice toDomain(Long productId, Integer brandId, OffsetDateTime dateToSearch);
 
   @Mapping(source = "amount.price", target = "finalPrice")
   @Mapping(source = "amount.currency", target = "currency")
