# src/main/resources/api-spec/openapi.json
@@ -28,12 +28,35 @@
         "operationId": "getPrice",
         "parameters": [
           {
-            "name": "filterPriceRequest",
+            "name": "productId",
             "in": "query",
-            "description": "Objeto para filtrar los precios",
+            "description": "Identificador del producto",
             "required": true,
             "schema": {
-              "$ref": "#/components/schemas/FilterPriceRequest"
+              "type": "integer",
+              "format": "int64",
+              "minimum": 1
+            }
+          },
+          {
+            "name": "brandId",
+            "in": "query",
+            "description": "Identificador de la marca",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "minimum": 1
+            }
+          },
+          {
+            "name": "dateToSearch",
+            "in": "query",
+            "description": "Fecha de aplicación (ISO 8601)",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "date-time"
             }
           }
         ],
@@ -90,7 +113,7 @@
                 "example": {
                   "timestamp": "2020-06-14T16:00:00Z",
                   "status": 500,
-                  "message": "Error Interno",
+                  "message": "Error Interno del servidor",
                   "path": "/api/prices"
                 }
               }
@@ -102,39 +125,6 @@
   },
   "components": {
     "schemas": {
-      "FilterPriceRequest": {
-        "type": "object",
-        "properties": {
-          "productId": {
-            "type": "integer",
-            "format": "int64",
-            "description": "Identificador del producto",
-            "example": 35455,
-            "minimum": 1,
-            "readOnly": true
-          },
-          "brandId": {
-            "type": "integer",
-            "format": "int32",
-            "description": "Identificador de la marca",
-            "example": 1,
-            "minimum": 1,
-            "readOnly": true
-          },
-          "dateToSearch": {
-            "type": "string",
-            "format": "date-time",
-            "description": "Fecha de aplicación (ISO 8601)",
-            "example": "2020-11-30T23:59:59",
-            "readOnly": true
-          }
-        },
-        "required": [
-          "brandId",
-          "dateToSearch",
-          "productId"
-        ]
-      },
       "PriceResponse": {
         "type": "object",
         "description": "Información del precio final aplicable",
@@ -142,48 +132,34 @@
           "productId": {
             "type": "integer",
             "format": "int64",
-            "description": "Identificador del producto",
-            "example": 1,
             "readOnly": true
           },
           "brandId": {
             "type": "integer",
             "format": "int32",
-            "description": "Identificador de la marca",
-            "example": 1,
             "readOnly": true
           },
           "priceList": {
             "type": "integer",
             "format": "int32",
-            "description": "Tarifa de precios aplicable",
-            "example": 3,
             "readOnly": true
           },
           "startDate": {
             "type": "string",
             "format": "date-time",
-            "description": "Fecha de inicio del precio",
-            "example": "2020-06-14-00.00.00",
             "readOnly": true
           },
           "endDate": {
             "type": "string",
             "format": "date-time",
-            "description": "Fecha de fin del precio",
-            "example": "2020-06-14-00.00.00",
             "readOnly": true
           },
           "finalPrice": {
             "type": "number",
-            "description": "Precio entre las fechas marcadas",
-            "example": 25.25,
             "readOnly": true
           },
           "currency": {
             "type": "string",
-            "description": "Moneda",
-            "example": "EUR",
             "readOnly": true
           }
         }
@@ -195,27 +171,19 @@
           "timestamp": {
             "type": "string",
             "format": "date-time",
-            "description": "Fecha del error",
-            "example": "020-06-14-00.00.00",
             "readOnly": true
           },
           "status": {
             "type": "integer",
             "format": "int32",
-            "description": "Código del error de la respuesta",
-            "example": 404,
             "readOnly": true
           },
           "message": {
             "type": "string",
-            "description": "Mensaje del error",
-            "example": "Objeto no encontrado",
             "readOnly": true
           },
           "path": {
             "type": "string",
-            "description": "LLamada que produjo el error",
-            "example": "/list/prices",
             "readOnly": true
           }
         }
